# magus-parvus

./: CREDITS.md  Cargo.toml  LICENSE  README.md  clippy.toml  push_to_itch.sh
.github/workflows/: ci.yaml  release.yaml
assets/: level.ldtk  lightning_strike.trickfilm
assets/enemy/: enemy_boss.trickfilm
assets/map/: level.ldtk  platform.trickfilm
assets/shooting_fx/Pixelart/Bolt/: bolt.aseprite
assets/shooting_fx/Pixelart/Pulse/: pulse.aseprite
assets/shooting_fx/Pixelart/charged/: charged.aseprite
assets/shooting_fx/Pixelart/crossed/: crossed.aseprite
assets/shooting_fx/Pixelart/hits/Hits-2/: hits-2.aseprite
assets/shooting_fx/Pixelart/hits/Hits-3/: hits-3.aseprite
assets/shooting_fx/Pixelart/hits/Hits-5/: hits-5.aseprite
assets/shooting_fx/Pixelart/hits/Hits-6/: hits-6.aseprite
assets/shooting_fx/Pixelart/hits/hits-1/: hits-1.aseprite
assets/shooting_fx/Pixelart/hits/hits-4/: hits-4.aseprite
assets/shooting_fx/Pixelart/spark/: spark.aseprite
assets/shooting_fx/Pixelart/waveform/: waveform.aseprite
assets/spell/: earth_wall.trickfilm  explosion.trickfilm  explosion2.trickfilm  lightning_bird.trickfilm  lightning_bird_death.trickfilm  lightning_strike.trickfilm  portal.trickfilm  smoke.trickfilm
src/: assets.rs  main.rs
src/audio/: bgm.rs  mod.rs  spacial.rs
src/enemy/: mod.rs  slime.rs
src/enemy/demon_boss/: attack.rs  audio.rs  cast.rs  collision.rs  earth_prison.rs  explosion.rs  mod.rs  movement.rs  rage.rs  spawn.rs  state.rs  strike.rs  wall.rs  win_item.rs
src/enemy/slime/: collision.rs  mod.rs  movement.rs  spawn.rs  sprite.rs
src/item/: enemy_spawner.rs  enemy_sub_spawner.rs  item_value.rs  mod.rs  platform.rs  sound.rs  statue.rs  statue_wall.rs
src/player/: audio.rs  collision.rs  damage.rs  input.rs  mod.rs  movement.rs  spawn.rs  speed_timer.rs  sprite.rs  state.rs  stats.rs
src/spell/: aer_tracto.rs  cast_spell.rs  death.rs  debug_spell.rs  fireball.rs  flub.rs  icicle.rs  kill_player.rs  lightning.rs  lightning_bird.rs  mod.rs  phantasma.rs  speed_boost.rs  spell.rs
src/ui/: damage_number.rs  game_over_ui.rs  health.rs  keyboard_ui.rs  mod.rs  platform_arrow.rs  pop_up.rs  scrollable_list.rs  spell_book.rs  statue_counter.rs  text_field.rs  vignette.rs  win_ui.rs  world_text.rs
src/ui/spell_book/: bundle.rs  mod.rs  scrollable_list.rs
src/utils/: anim_sprite.rs  diagnostics.rs  mod.rs
src/world/: camera.rs  camera_shake.rs  game_entity.rs  map.rs  map_colliders.rs  mod.rs  rapier_debug.rs
wasm/: index.html  styles.css
