[package]
name = "magus-parvus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"

bevy = "0.16"
bevy_screen_diagnostics = "0.8"
bevy_asset_loader = { version = "0.23", features = ["2d"] }
bevy_ecs_ldtk = { version = "0.12", features = ["atlas"]}
bevy_rapier2d = "0.30"
bevy_kira_audio = "0.23"
bevy_trickfilm = "0.11"
noisy_bevy = "0.10"
